intel/bench_ready/Paeth/log.txt
bench_ready/Paeth/Paeth.cpp:11:20: error: redefinition of 'a' with a different type: 'unsigned short [1024]' vs 'unsigned short *'
    unsigned short a[DATA_SIZE];
                   ^
bench_ready/Paeth/Paeth.cpp:9:21: note: previous definition is here
    unsigned short *a, *b, *c, *out;
                    ^
bench_ready/Paeth/Paeth.cpp:12:20: error: redefinition of 'b' with a different type: 'unsigned short [1024]' vs 'unsigned short *'
    unsigned short b[DATA_SIZE];
                   ^
bench_ready/Paeth/Paeth.cpp:9:25: note: previous definition is here
    unsigned short *a, *b, *c, *out;
                        ^
bench_ready/Paeth/Paeth.cpp:13:20: error: redefinition of 'c' with a different type: 'unsigned short [1024]' vs 'unsigned short *'
    unsigned short c[DATA_SIZE];
                   ^
bench_ready/Paeth/Paeth.cpp:9:29: note: previous definition is here
    unsigned short *a, *b, *c, *out;
                            ^
bench_ready/Paeth/Paeth.cpp:14:20: error: redefinition of 'out' with a different type: 'unsigned short [1024]' vs 'unsigned short *'
    unsigned short out[DATA_SIZE];
                   ^
bench_ready/Paeth/Paeth.cpp:9:33: note: previous definition is here
    unsigned short *a, *b, *c, *out;
                                ^
4 errors generated.
HLS FPGA Parse FAILED.
